# Renaissance_Stock_Ranking

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
data/: financial_metrics.csv
data/sample/: historical_prices.csv  nifty500_list.csv
docs/: README_sector_analysis.md  bloomberg_api_guide.md  data_extraction_guide.md  example_usage.ipynb  sector_analysis.py  user_guide.md  visualize_results.py
docs/img/: workflow.txt
examples/: example_usage.ipynb
renaissance/: __init__.py
renaissance/analysis/: __init__.py  sector_analysis.py
renaissance/cli/: __init__.py  analyze.py  extract.py  main.py  visualize.py
renaissance/core/: __init__.py  return_calculator.py
renaissance/data_extraction/: __init__.py  bloomberg_data_extractor.py
renaissance/visualization/: __init__.py  visualize.py
scripts/: analyze_sectors.py  extract_bloomberg.py  run_ranking.py  visualize_results.py
src/: bloomberg_data_extractor.py  data_loader.py  main.py  output_generator.py  rank_delta_calculator.py  ranking_system.py
tests/: test_bloomberg_extractor.py  test_ranking_system.py  test_sector_analysis.py  test_visualization.py
