[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renaissance-stock-ranking"
version = "1.0.0"
description = "Automated Stock Ranking System for Renaissance Investment Managers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "Renaissance Investment Managers"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
]

[project.scripts]
renaissance-rank = "renaissance.cli.main:main"
renaissance-analyze = "renaissance.cli.analyze:main"
renaissance-visualize = "renaissance.cli.visualize:main"
renaissance-extract = "renaissance.cli.extract:main" 